gccida/g0/spelling_length
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/spelling_length/src/c-typeck.c:5036:30: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
for ( p = spelling_base; p < spelling_0; ++p ) 
                             ^~~~~~~~~~
                             spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/spelling_length/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/spelling_length/src/obj/c-typeck.o] Error 1
